--- a/index.html
+++ b/index.html
@@ -16,23 +16,32 @@
   <!-- Title -->  
   <title>Frontend Mentor | Intro component with sign up form</title>
 </head>
-<body>
-
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
+<body class="bg-Red md:bg-[url('./assets/images/bg-intro-desktop.png')] bg-[url('./assets/images/bg-intro-mobile.png')] flex items-center justify-center md:h-screen">
+  <!-- Intro Component With Sign Up Form -->
+   <section class="container mx-auto flex md:flex-row flex-col items-center justify-center my-4">
+    <div class="flex flex-col justify-center md:mx-20 mx-14 md:w-1/2 md:text-left text-center">
+      <h1 class="text-white md:text-6xl text-3xl font-bold mt-10">
+        Learn to code by watching others
+      </h1>
+      <p class="text-white font-semibold text-base my-6">
+        See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+        but understanding how developers think is invaluable. 
+      </p>
+    </div>
+    <div class="flex flex-col justify-center mx-14 md:w-1/2">
+      <div class="bg-Blue shadow-lg shadow-DarkBlue px-2 py-5 rounded-md text-center my-6">
+        <p class="text-white font-normal"><span class="font-semibold">Try it free 7 days</span> then $20/mo. thereafter</p>
+      </div>
+      <form class="bg-white flex flex-col p-9 rounded-lg">
+        <input type="text" placeholder="First Name" class="my-2 px-4 py-2 font-semibold border border-GrayishBlue placeholder-GrayishBlue rounded-md">
+        <input type="text" placeholder="Last Name" class="my-2 px-4 py-2 font-semibold border border-GrayishBlue placeholder-GrayishBlue rounded-md">
+        <input type="text" placeholder="Email Address" class="my-2 px-4 py-2 font-semibold border border-GrayishBlue placeholder-GrayishBlue rounded-md">
+        <input type="password" placeholder="Password" class="my-2 px-4 py-2 font-semibold border border-GrayishBlue placeholder-GrayishBlue rounded-md">
+        <button class="bg-Green text-white font-bold uppercase shadow-md shadow-Green py-4 rounded-md my-2">Claim your free trial</button>
+        <span class="text-GrayishBlue md:text-sm text-xs text-center my-2">By clicking the button, you are agreeing to our <span class="text-Red font-bold cursor-pointer">Terms and Services</span></span>
+      </form>
+    </div>
+   </section>
   <!-- Custom JS -->
   <script src="assets/js/script.js"></script>
 </body>
