fixed style on form

--- a/index.html
+++ b/index.html
@@ -38,32 +38,32 @@
       </div>
       <form id="signup-form" class="bg-white flex flex-col p-9 rounded-lg">
         <!-- First Name Field -->
-        <div class="relative flex flex-col">
+        <div class="relative flex flex-col mb-1">
           <input id="first-name" type="text" placeholder="First Name" class="my-2 px-4 py-2 font-semibold focus:outline-none focus:border-GrayishBlue border border-GrayishBlue placeholder-GrayishBlue rounded-md">
           <img id="first-name-error-icon" src="assets/images/icon-error.svg" alt="Error Icon" class="hidden w-[25px] absolute top-[17px] right-[12px]">
           <p id="first-name-error-message" class="hidden text-right text-xs text-Red font-medium italic">First Name cannot be empty</p>
         </div>
         <!-- Last Name Field -->
-        <div class="relative flex flex-col">
+        <div class="relative flex flex-col mb-1">
           <input id="last-name" type="text" placeholder="Last Name" class="my-2 px-4 py-2 font-semibold focus:outline-none focus:border-GrayishBlue border border-GrayishBlue placeholder-GrayishBlue rounded-md">
           <img id="last-name-error-icon" src="assets/images/icon-error.svg" alt="Error Icon" class="hidden w-[25px] absolute top-[17px] right-[12px]">
           <p id="last-name-error-message" class="hidden text-right text-xs text-Red font-medium italic">Last Name cannot be empty</p>
         </div>
         <!-- Email Field-->
-        <div class="relative flex flex-col">
+        <div class="relative flex flex-col mb-1">
           <input id="email" type="text" placeholder="Email Address" class="my-2 px-4 py-2 font-semibold focus:outline-none focus:border-GrayishBlue border border-GrayishBlue placeholder-GrayishBlue rounded-md">
           <img id="email-error-icon" src="assets/images/icon-error.svg" alt="Error Icon" class="hidden w-[25px] absolute top-[17px] right-[12px]">
           <p id="email-error-message" class="hidden text-right text-xs text-Red font-medium italic">Looks like this is not an email</p>
         </div>
         <!-- Password Field -->
-        <div class="relative flex flex-col">
+        <div class="relative flex flex-col mb-1">
           <input id="password" type="password" placeholder="Password" class="my-2 px-4 py-2 font-semibold focus:outline-none focus:border-GrayishBlue border border-GrayishBlue placeholder-GrayishBlue rounded-md">
           <img id="password-error-icon" src="assets/images/icon-error.svg" alt="Error Icon" class="hidden w-[25px] absolute top-[17px] right-[12px]">
           <p id="password-error-message" class="hidden text-right text-xs text-Red font-medium italic">Password cannot be empty</p>
         </div>
         <!-- Submit Button-->
-        <button id="submit-btn" type="button" class="bg-Green text-white font-bold uppercase shadow-md shadow-Green py-3 rounded-md my-4">Claim your free trial</button>
-        <span class="text-GrayishBlue md:text-sm text-xs text-center my-2">By clicking the button, you are agreeing to our <span class="text-Red font-bold cursor-pointer">Terms and Services</span></span>
+        <button id="submit-btn" type="button" class="bg-Green text-white hover:opacity-85 transition-all duration-300 font-bold uppercase shadow-md shadow-Green py-3 rounded-md my-4">Claim your free trial</button>
+        <span class="text-GrayishBlue text-xs text-center my-2 hover:opacity-85 transition-all duration-300">By clicking the button, you are agreeing to our <span class="text-Red font-bold cursor-pointer">Terms and Services</span></span>
       </form>
     </div>
    </section>
