--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 <body class="bg-Red md:bg-[url('./assets/images/bg-intro-desktop.png')] bg-[url('./assets/images/bg-intro-mobile.png')] flex items-center justify-center md:h-screen">
   <!-- Intro Component With Sign Up Form -->
-   <section class="container mx-auto flex md:flex-row flex-col items-center justify-center my-4">
+   <main class="container mx-auto flex md:flex-row flex-col items-center justify-center my-4">
     <!-- Content Section -->
-    <div class="flex flex-col justify-center md:mx-20 mx-14 md:w-1/2 md:text-left text-center">
+    <header class="flex flex-col justify-center md:mx-20 mx-14 md:w-1/2 md:text-left text-center">
       <!-- Header -->
       <h1 class="text-white md:text-6xl text-3xl font-bold mt-10">
         Learn to code by watching others
@@ -30,7 +30,7 @@
         See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
         but understanding how developers think is invaluable. 
       </p>
-    </div>
+    </header>
     <div class="flex flex-col justify-center mx-14 md:w-1/2">
       <!-- Form Section -->
       <div class="bg-Blue shadow-lg shadow-DarkBlue px-2 py-5 rounded-md text-center my-6">
@@ -66,7 +66,7 @@
         <span class="text-GrayishBlue text-xs text-center my-2 hover:opacity-85 transition-all duration-300">By clicking the button, you are agreeing to our <span class="text-Red font-bold cursor-pointer">Terms and Services</span></span>
       </form>
     </div>
-   </section>
+   </main>
   <!-- Custom JS -->
   <script src="assets/js/script.js"></script>
 </body>
